syntax = "proto3";
package Generic;

import "google/protobuf/any.proto";

message GenericClass {
  google.protobuf.Any myObject = 1;
}

message Person {
  string name = 1;
  int32 id = 2; 
  repeated string emails = 3;
  PhoneNumber number = 4;
}

message PhoneNumber {
	string prefix = 1;
	string number = 2; 
}

message Dog {
	string name = 1;
	string type = 2;
}